# Team18SmartGlassesProject

./: README.md  frame.py
SmartGlassesProjectTeam18/: pyproject.toml
Team18Code/: pyproject.toml  test_whisper.py
