[tool.poetry]
name = "team18code"
version = "0.1.0"
description = ""
authors = ["Annaelle MANSUY <annaelle.mansuy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llm = "^0.18"
langchain = "^0.3.8"
fastapi = "^0.115.5"
pydantic = "^2.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
